--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,7 @@ publish/
 *.Publish.xml
 
 # NuGet Packages Directory
-## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-Source/packages/*
+[Pp]ackages/
 
 # Windows Azure Build Output
 csx
